lesson3-hw/lesson3-hw/cheese/k8s/nginx-configmap.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: cheese
spec:
  containers:
  - name: nginx
    image: nginx:latest
    volumeMounts:
    - name: nginx-config-volume
      mountPath: /usr/share/nginx/html
  volumes:
  - name: nginx-config-volume
    configMap:
      name: nginx-config
