lesson3-hw/lesson3-hw/cheese/k8s/cheddar-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cheddar
  namespace: cheese
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cheddar
  template:
    metadata:
      labels:
        app: cheddar
    spec:
      containers:
      - name: cheddar
        image: itaef/cheddar-image:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: cheddar-svc
  namespace: cheese
spec:
  selector:
    app: cheddar
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
