lesson3-hw/lesson3-hw/cheese/k8s/gauda-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gauda
  namespace: cheese
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gauda
  template:
    metadata:
      labels:
        app: gauda
    spec:
      containers:
      - name: gauda
        image: itaef/gauda-image:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: gauda-svc
  namespace: cheese
spec:
  selector:
    app: gauda
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
