lesson3-hw/lesson3-hw/cheese/k8s/cheese-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cheese-ingress
  namespace: cheese
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - ams.cheese.com
    secretName: cheese-tls
  rules:
  - host: ams.cheese.com
    http:
      paths:
      - path: /cheddar
        pathType: Prefix
        backend:
          service:
            name: cheddar-svc
            port:
              number: 80
      - path: /gauda
        pathType: Prefix
        backend:
          service:
            name: gauda-svc
            port:
              number: 80
